# AI_HR_WORKFLOW

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 13068c59b3dc_add_candidate_applications.py  6e24d3eb886f_add_combined_score_fields.py  6f18ba9bdc5e_add_jobs_table.py  71e016588d05_init_user_table.py  9608c0d00cc7_add_social_assets_table.py  a5aa18797579_init_user_table.py  baa86a3211e5_add_screening_results.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: application.py  auth.py  job.py  public.py  social_asset.py
backend/app/core/: config.py  database.py  security.py
backend/app/llm/: base.py  exceptions.py  factory.py  gateway.py  gemini.py  groq.py
backend/app/models/: __init__.py  application.py  base.py  candidate.py  job.py  screening.py  social_asset.py  user.py
backend/app/repositories/: application.py  candidate.py  job.py  screening.py  social_asset.py  user.py
backend/app/schemas/: auth.py  candidate.py  job.py  screening.py  social_asset.py
backend/app/scripts/: seed_hr_user.py
backend/app/services/: auth.py  candidate.py  extractor.py  github.py  job.py  queue.py  queue_base.py  screening.py  social_asset.py  storage.py  storage_base.py
backend/tests/: conftest.py  test_auth.py  test_workflows.py
frontend/: .dockerignore  Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: BrandedVisualPreview.tsx  CreateJobModal.tsx  SocialAssetCard.tsx  StatusBadge.tsx
(+8 files in other folders)
