[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt<4.1",
    "email-validator>=2.3.0",
    "fastapi>=0.138.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "httpx>=0.28.0",
    "boto3>=1.36.0",
    "pymupdf>=1.24.2",
    "python-docx>=1.1.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-env>=1.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
env = [
    "DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/ai_hr_test",
    "MOCK_GITHUB=True",
    "GEMINI_API_KEY=mock",
    "GROQ_API_KEY=mock",
    "JWT_SECRET=super_secret_test_key_change_in_production_not_here",
]

[tool.setuptools]
packages = ["app"]

